feat: user/me, extra checks on permissions and mapping from mongoDB entity to api json
